feat: 카테고리 api total페이지 구현